--- a/05- SIlver to Gold/01-.md
+++ b/05- SIlver to Gold/01-.md
@@ -1,1 +1,125 @@
 
+let's start with organizing the tables into Fact and Dimension tables:
+
+Fact Tables:
+results:
+
+season: integer
+
+round: integer
+
+raceName: string
+
+raceDate: string
+
+raceTime: string
+
+driver_number: integer
+
+position: integer
+
+points: double
+
+driver_fullName: string
+
+dob: string
+
+nationality: string
+
+constructor_name: string
+
+grid_position: integer
+
+laps: integer
+
+status: string
+
+time: string
+
+fastest_LapRank: integer
+
+fastest_LapNumber: integer
+
+fastest_LapTime: string
+
+average_Speed: double
+
+ingestion_date: timestamp
+
+qualifying:
+
+qualify_Id: integer
+
+constructor_Id: string
+
+number: integer
+
+position: integer
+
+q1: string
+
+q2: string
+
+q3: string
+
+DriverName: string
+
+race_Id: integer
+
+ingestion_date: timestamp
+
+Dimension Tables:
+races:
+
+race_id: integer
+
+race_year: integer
+
+name: string
+
+round: integer
+
+circuit_id: string
+
+race_timestamp: timestamp
+
+ingestion_date: timestamp
+
+circuits:
+
+circuitID: string
+
+circuitName: string
+
+location: string
+
+country: string
+
+lat: double
+
+lng: double
+
+ingestion_date: timestamp
+
+constructors:
+
+name: string
+
+nationality: string
+
+url: string
+
+ingestion_date: timestamp
+
+drivers:
+
+full_name: string
+
+dob: string
+
+nationality: string
+
+ingestion_date: timestamp
+
+Transformations from Silver Layer to Gold Layer:
+Now, let's write the code to read these files from the Silver Layer and write to the Gold Layer.
