--- a/05- SIlver to Gold/01-.md
+++ b/05- SIlver to Gold/01-.md
@@ -1,125 +1,78 @@
 
-let's start with organizing the tables into Fact and Dimension tables:
+## Dimensions
 
-Fact Tables:
-results:
+### Circuits Dimension
+```python
 
-season: integer
+# Define the path to your Silver Layer data
+Path_Circuits = "/mnt/dldatabricks/02-silver/circuits/"
 
-round: integer
+# Read the Delta table into a DataFrame
+circuits_df = spark.read.format("delta").load(Path_Circuits)
 
-raceName: string
+# Display the DataFrame
+circuits_df.show(truncate=False)
+```
 
-raceDate: string
+### Constructors Dimension
+````python
 
-raceTime: string
+# Define the path to your Silver Layer data
+Path_Constructors = "/mnt/dldatabricks/02-silver/constructors/"
 
-driver_number: integer
+# Read the Delta table into a DataFrame
+constructors_df = spark.read.format("delta").load(Path_Constructors)
 
-position: integer
+# Display the DataFrame
+constructors_df.show(truncate=False)
+````
 
-points: double
 
-driver_fullName: string
+### Drivers Dimension
+````python
 
-dob: string
+# Define the path to your Silver Layer data
+Path_Drivers = "/mnt/dldatabricks/02-silver/drivers/"
 
-nationality: string
+# Read the Delta table into a DataFrame
+drivers_df = spark.read.format("delta").load(Path_Drivers)
 
-constructor_name: string
+# Display the DataFrame
+drivers_df.show(truncate=False)
+````
+## Fact Tables
+### Races Fact
 
-grid_position: integer
+````python
+# Define the path to your Silver Layer data
+Path_Race = "/mnt/dldatabricks/02-silver/races/"
 
-laps: integer
+# Read the Delta table into a DataFrame
+races_df = spark.read.format("delta").load(Path_Race)
 
-status: string
+# Display the DataFrame
+races_df.show(truncate=False)
+````
 
-time: string
 
-fastest_LapRank: integer
+### Qualifying Fact
+````python
+# Define the path to your Silver Layer data
+Path_Qualifying = "/mnt/dldatabricks/02-silver/qualifying/"
 
-fastest_LapNumber: integer
+# Read the Delta table into a DataFrame
+qualifying_df = spark.read.format("delta").load(Path_Qualifying)
 
-fastest_LapTime: string
+# Display the DataFrame
+qualifying_df.show(truncate=False)
+````
+### Results Fact
+`````python
+# Define the path to your Silver Layer data
+Path_Results = "/mnt/dldatabricks/02-silver/results/"
 
-average_Speed: double
+# Read the Delta table into a DataFrame
+results_df = spark.read.format("delta").load(Path_Results)
 
-ingestion_date: timestamp
-
-qualifying:
-
-qualify_Id: integer
-
-constructor_Id: string
-
-number: integer
-
-position: integer
-
-q1: string
-
-q2: string
-
-q3: string
-
-DriverName: string
-
-race_Id: integer
-
-ingestion_date: timestamp
-
-Dimension Tables:
-races:
-
-race_id: integer
-
-race_year: integer
-
-name: string
-
-round: integer
-
-circuit_id: string
-
-race_timestamp: timestamp
-
-ingestion_date: timestamp
-
-circuits:
-
-circuitID: string
-
-circuitName: string
-
-location: string
-
-country: string
-
-lat: double
-
-lng: double
-
-ingestion_date: timestamp
-
-constructors:
-
-name: string
-
-nationality: string
-
-url: string
-
-ingestion_date: timestamp
-
-drivers:
-
-full_name: string
-
-dob: string
-
-nationality: string
-
-ingestion_date: timestamp
-
-Transformations from Silver Layer to Gold Layer:
-Now, let's write the code to read these files from the Silver Layer and write to the Gold Layer.
+# Display the DataFrame
+results_df.show(truncate=False)
