--- a/05- SIlver to Gold/01-.md
+++ b/05- SIlver to Gold/01-.md
@@ -1,3 +1,78 @@
+## Dimension Tables:
+---
+
+### Circuits Dimension
+- circuitID: string
+- circuitName: string
+- location: string
+- country: string
+- lat: double
+- lng: double
+- ingestion_date: timestamp
+
+### Constructors Dimension
+- name: string
+- nationality: string
+- url: string
+- ingestion_date: timestamp
+
+### Drivers Dimension
+- full_name: string
+- dob: string
+- nationality: string
+- ingestion_date: timestamp
+
+## Fact Tables:
+---
+### Races Fact
+- race_id: integer
+- race_year: integer
+- name: string
+- round: integer
+- circuit_id: string
+- race_timestamp: timestamp
+- ingestion_date: timestamp
+
+### Qualifying Fact
+- qualify_Id: integer
+- constructor_Id: string
+- number: integer
+- position: integer
+- q1: string
+- q2: string
+- q3: string
+- DriverName: string
+- race_Id: integer
+- ingestion_date: timestamp
+
+### Results Fact
+- season: integer
+- round: integer
+- raceName: string
+- raceDate: string
+- raceTime: string
+- driver_number: integer
+- position: integer
+- points: double
+- driver_fullName: string
+- dob: string
+- nationality: string
+- constructor_name: string
+- grid_position: integer
+- laps: integer
+- status: string
+- time: string
+- fastest_LapRank: integer
+- fastest_LapNumber: integer
+- fastest_LapTime: string
+- average_Speed: double
+- ingestion_date: timestamp
+
+## Instructions for Use
+1. **Ensure your Spark session is properly configured and running**.
+2. **Set the paths to your Silver Layer data**.
+3. **Run the provided Python code snippets in a notebook or script to read and display the data**.
+4. **Perform any additional transformations if needed before writing them to the Gold Layer**.
 
 ## Dimensions
 
